Added bearerAuth/ Changed url to api/docs
