# app/Http/Controllers/Controller.php
@@ -18,6 +18,16 @@ use Illuminate\Routing\Controller as BaseController;
  *      )
  * )
  *
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="bearerToken",
+ * )
+ *
  * @OA\Server(
  *      url=L5_SWAGGER_CONST_HOST,
  *      description="API"
